<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/allerta"
            android:text="@string/title"
            android:textColor="@color/darkBlue"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar">

        </TextView>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_alert">

        </ImageView>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_time">

        </ImageView>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_timer">

        </ImageView>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_more_time">

        </ImageView>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/worldMapImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:strokeColor="@android:color/white"
            app:layout_constraintTop_toTopOf="@id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/world_map">
        </com.google.android.material.imageview.ShapeableImageView>

        <TextView
            android:id="@+id/timeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:text="@string/_03_50_00_am"
            android:textSize="40sp"
            android:fontFamily="@font/allerta"
            android:textStyle="bold"
            android:textColor="@color/darkBlue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/worldMapImg" />

        <TextView
            android:id="@+id/dateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/october_11_2023"
            app:layout_constraintTop_toBottomOf="@id/timeTv"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:layout_marginStart="140dp"
            android:fontFamily="@font/allerta"
            android:layout_gravity="center"
            android:textSize="15sp">

        </TextView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/dateTv"
            android:backgroundTint="@color/cardBackGroundColor"
            android:layout_marginTop="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/LinearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/ivTime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_time"
                    android:scaleType="centerCrop"
                    android:layout_marginStart="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </ImageView>

                <TextView
                    android:id="@+id/cityName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/london"
                    app:layout_constraintStart_toEndOf="@id/ivTime"
                    android:layout_marginStart="12dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/allerta"
                    android:textColor="@color/darkBlue"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    app:layout_constraintStart_toEndOf="@id/ivTime"
                    app:layout_constraintTop_toBottomOf="@id/cityName"
                    android:fontFamily="@font/allerta"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="13dp"
                    >

                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_17_05"
                    android:textSize="20sp"
                    android:textColor="@color/darkBlue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:fontFamily="@font/allerta"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold">

                </TextView>


            </androidx.constraintlayout.widget.ConstraintLayout>



        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materiadCv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/cardBackGroundColor"
            app:layout_constraintTop_toBottomOf="@id/materialCardView"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/LinearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/ivTime2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_time"
                    android:scaleType="centerCrop"
                    android:layout_marginStart="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </ImageView>

                <TextView
                    android:id="@+id/cityName2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/jakarta"
                    app:layout_constraintStart_toEndOf="@id/ivTime2"
                    android:layout_marginStart="12dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/allerta"
                    android:textColor="@color/darkBlue"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    app:layout_constraintStart_toEndOf="@id/ivTime2"
                    app:layout_constraintTop_toBottomOf="@id/cityName2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:fontFamily="@font/allerta"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="13dp"
                    >

                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_20_05"
                    android:textSize="20sp"
                    android:textColor="@color/darkBlue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:fontFamily="@font/allerta"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold">

                </TextView>


            </androidx.constraintlayout.widget.ConstraintLayout>



        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/extended_fab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/materiadCv"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:fontFamily="@font/allerta"
            android:text="@string/add_world_clock"
            app:iconTint="@color/white"
            android:paddingStart="100dp"
            app:icon="@drawable/ic_add"
            app:iconPadding="-100dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>